feat: criando header padrão e atualizando cores

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/styles/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -13,7 +13,17 @@
     <title>SorteadorAlpha</title>
   </head>
   <body>
-    <header></header>
+    <header>
+      <div class="container">
+        <div class="logo">
+          <img src="images/SorteadorAlpha.svg" alt="Icone logo do Sorteador Alpha" />
+        </div>
+        <ul>
+          <li><a href="#">Sorteio de Números</a></li>
+          <li><a href="#">Sorteio de Nomes</a></li>
+        </ul>
+      </div>
+    </header>
 
     <div id="root"></div>
   </body>
