feat: adicionei as tags a para troca a SPA

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
           <img src="images/SorteadorAlpha.svg" alt="Icone logo do Sorteador Alpha" />
         </div>
         <ul>
-          <li><a href="#">Sorteio de Números</a></li>
-          <li><a href="#">Sorteio de Nomes</a></li>
+          <li><a href="/#">Sorteio de Números</a></li>
+          <li><a href="/#SorteioNomes">Sorteio de Nomes</a></li>
         </ul>
       </div>
     </header>
