feat: adiciona o botão checkbox

--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
       </div>
     </header>
 
+    <div class="toggle-switch">
+      <input type="checkbox" class="toggle-checkbox" id="toggle-switch" />
+      <label class="toggle-label" for="toggle-switch"></label>
+    </div>
+
     <div id="root"></div>
   </body>
   <script src="main.js"></script>
