test: adicionar input e textarea no index.html para testes de sorteio

--- a/index.html
+++ b/index.html
@@ -30,7 +30,12 @@
       <label class="toggle-label" for="toggle-switch"></label>
     </div>
 
-    <div id="root"></div>
+    <div id="root">
+      Sortear <input type="text" id="quantidade-sortear"> <br> <br>
+      <textarea id="textarea"></textarea> <br> <br>
+      <button id="sortear">Sortear</button>
+    </div>
   </body>
+  <script src="modules/sorteador-nome.js"></script>
   <script src="main.js"></script>
 </html>
