feat: adicionada div que receberá as divs com os nomes que serão sorteados e adicionada função que cria a div dos nomes que serão sorteados

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       Sortear <input type="text" id="quantidade-sortear"> <br> <br>
       <textarea id="textarea"></textarea> <br> <br>
       <button id="sortear">Sortear</button>
+      <div id="adicionarNomes"></div>
     </div>
   </body>
   <script src="modules/sorteador-nome.js"></script>
