feat: adiciona o layout dos numeros

--- a/index.html
+++ b/index.html
@@ -25,9 +25,38 @@
       </div>
     </header>
 
+    <!-- AQUI É O BOTÃO CHECKBOX -->
     <div class="toggle-switch">
       <input type="checkbox" class="toggle-checkbox" id="toggle-switch" />
       <label class="toggle-label" for="toggle-switch"></label>
+    </div>
+
+    <!-- AQUI É O LAYOUT DOS NUMEROS -->
+    <div class="spa-result">
+      <div class="title">
+        <div class="icon">
+          <h3>123</h3>
+        </div>
+        <h2>Sorteio de Números</h2>
+      </div>
+      <div class="sorteador">
+        <p>Sorteador</p>
+        <input type="number" name="" id="" value="1" />
+        <p>número entre</p>
+        <input type="number" name="" id="" value="1" />
+        <p>e</p>
+        <input type="number" name="" id="" value="100" />
+      </div>
+      <div class="opcoes-checkbox">
+        <div class="opcoes">
+          <div class="toggle-switch">
+            <input type="checkbox" class="toggle-checkbox" id="toggle-switch" />
+            <label class="toggle-label" for="toggle-switch"></label>
+          </div>
+          <p>Não repetir número</p>
+        </div>
+      </div>
+      <button class="btn-primario">Sortear</button>
     </div>
 
     <div id="root"></div>
