feat: adicionado as funcionalidades de sortear números e validar os inputs

--- a/index.html
+++ b/index.html
@@ -27,5 +27,13 @@
 
     <div id="root"></div>
   </body>
-  <script src="main.js"></script>
+    <h1>sortear</h1>
+    Digite quantos valores serão sorteados <input id="quantidade" type="number">
+    <br>
+    Primeiro Valor <input id="comecoNum" type="number">
+    <br>
+    Ultimo Valor <input id="finalNum" type="number">
+    <br>
+    <button id="botaoSortear">Sortear</button>
+  <script src="modules/sorteadorNumeros.js"></script>
 </html>
