feat:Adicionado todas as funções referentes a sortear os números

--- a/index.html
+++ b/index.html
@@ -26,48 +26,12 @@
     </header>
 
     <!-- AQUI É O BOTÃO CHECKBOX -->
-    <div class="toggle-switch">
+    <!-- <div class="toggle-switch">
       <input type="checkbox" class="toggle-checkbox" id="toggle-switch" />
       <label class="toggle-label" for="toggle-switch"></label>
-    </div>
-
-    <!-- AQUI É O LAYOUT DOS NUMEROS -->
-    <div class="spa-result">
-      <div class="title">
-        <div class="icon">
-          <h3>123</h3>
-        </div>
-        <h2>Sorteio de Números</h2>
-      </div>
-      <div class="sorteador">
-        <p>Sorteador</p>
-        <input type="number" name="" id="" value="1" />
-        <p>número entre</p>
-        <input type="number" name="" id="" value="1" />
-        <p>e</p>
-        <input type="number" name="" id="" value="100" />
-      </div>
-      <div class="opcoes-checkbox">
-        <div class="opcoes">
-          <div class="toggle-switch">
-            <input type="checkbox" class="toggle-checkbox" id="toggle-switch" />
-            <label class="toggle-label" for="toggle-switch"></label>
-          </div>
-          <p>Não repetir número</p>
-        </div>
-      </div>
-      <button class="btn-primario">Sortear</button>
-    </div>
+    </div> -->
 
     <div id="root"></div>
   </body>
-    <h1>sortear</h1>
-    Digite quantos valores serão sorteados <input id="quantidade" type="number">
-    <br>
-    Primeiro Valor <input id="comecoNum" type="number">
-    <br>
-    Ultimo Valor <input id="finalNum" type="number">
-    <br>
-    <button id="botaoSortear">Sortear</button>
   <script src="modules/sorteadorNumeros.js"></script>
 </html>
