feat: adicionada a função de não repetir nome, botão voltar e quantidade de nomes

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
     <header>
       <div class="container">
         <div class="logo">
-          <img src="images/SorteadorAlpha.svg" alt="Icone logo do Sorteador Alpha" />
+          <img
+            src="images/SorteadorAlpha.svg"
+            alt="Icone logo do Sorteador Alpha"
+          />
         </div>
         <ul>
           <li><a href="/#">Sorteio de Números</a></li>
@@ -25,11 +28,11 @@
       </div>
     </header>
 
-    <!-- AQUI É O BOTÃO CHECKBOX -->
+    <!-- AQUI É O BOTÃO CHECKBOX
     <div class="toggle-switch">
       <input type="checkbox" class="toggle-checkbox" id="toggle-switch" />
       <label class="toggle-label" for="toggle-switch"></label>
-    </div>
+    </div> -->
 
     <!-- AQUI É O LAYOUT DOS NUMEROS
     <div class="spa-result">
