feat: adicionei o icone do alpha

--- a/index.html
+++ b/index.html
@@ -10,16 +10,14 @@
       href="https://fonts.googleapis.com/css2?family=Inter:opsz,wght@14..32,100..900&display=swap"
       rel="stylesheet"
     />
+    <link rel="shortcut icon" href="images/alpha-icon.png" type="image/x-icon" />
     <title>SorteadorAlpha</title>
   </head>
   <body>
     <header>
       <div class="container">
         <div class="logo">
-          <img
-            src="images/SorteadorAlpha.svg"
-            alt="Icone logo do Sorteador Alpha"
-          />
+          <img src="images/SorteadorAlpha.svg" alt="Icone logo do Sorteador Alpha" />
         </div>
         <ul>
           <li><a href="/#">Sorteio de Números</a></li>
@@ -28,7 +26,6 @@
       </div>
     </header>
     <div id="root"></div>
-
   </body>
   <script src="main.js" type="module"></script>
 </html>
